--- a/momentum.css
+++ b/momentum.css
@@ -1,5 +1,15 @@
 body {
     background-color: #444444;
+    font-family: 'Playfair Display SC', serif;
+    color:#fff;
+}
+
+body > div {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 .form ,
@@ -20,7 +30,6 @@ body {
     }
 }
 
-
 .bgImage {
     position: absolute;
     top: 0;
@@ -29,4 +38,8 @@ body {
     height: 100%;
     z-index: -1;
     animation: fadeIn .5s linear;
+}
+
+h1 {
+    font-size: 8em;
 }
